some small changes

--- a/index.html
+++ b/index.html
@@ -211,15 +211,16 @@
         <div class="box">
             <div class="info">
                 <i class="fas fa-phone"></i>
-                <p> +123-456-7890 <br> +111-2222-333 </p>
+                <p>877-357-6338</p>
             </div>
             <div class="info">
                 <i class="fas fa-envelope"></i>
-                <p> example@gmail.com <br> example@gmail.com </p>
+                <p>nfo@tokbird.com</p>
             </div>
             <div class="info">
                 <i class="fas fa-map-marker-alt"></i>
-                <p> Gujarat, india - 12314 </p>
+                <p>700 Smith St #61070
+                    Houston, TX 77003</p>
             </div>
         </div>
 
