--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <nav class="navbar">
         <a href="#home">home</a>
-        <a href="#features">Why TokBird</a>
-        <a href="#about">Solutions</a>
-        <a href="#review">Contact Us</a>
-        <a class="loginbtn" href="#pricing">Login</a>
-        <a class="tryfreebtn" href="#contact">Try Free</a>
+        <a href="#">Why TokBird</a>
+        <a href="#">Solutions</a>
+        <a href="#">Contact Us</a>
+        <a class="loginbtn" href="#">Login</a>
+        <a class="tryfreebtn" href="#">Try Free</a>
     </nav>
 
 </header>
